syntax = "proto3";
option go_package = "github.com/twirapp/twir/libs/api/messages/alerts";
package messages.alerts;

message Alert {
	string id = 1;
	string name = 2;
	optional string audio_id = 3;
	int32 audio_volume = 4;
	repeated string command_ids = 5;
	repeated string reward_ids = 6;
	repeated string greetings_ids = 7;
	repeated string keywords_ids = 8;
}

message CreateRequest {
	string name = 1;
	optional string audio_id = 2;
	int32 audio_volume = 3;
	repeated string command_ids = 4;
	repeated string reward_ids = 5;
	repeated string greetings_ids = 6;
	repeated string keywords_ids = 7;
}

message RemoveRequest {
	string id = 1;
}

message GetAllResponse {
	repeated Alert alerts = 1;
}

message UpdateRequest {
	string id = 1;
	string name = 2;
	optional string audio_id = 3;
	int32 audio_volume = 4;
	repeated string command_ids = 5;
	repeated string reward_ids = 6;
	repeated string greetings_ids = 7;
	repeated string keywords_ids = 8;
}

message GetOneRequest {
	string id = 1;
}
